--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t rmorency40/docker-react -f Dockerfile.dev .
+  - docker build -t rmorency40/docker-react1 -f Dockerfile.dev .
 
 script:
-  - docker run rmorency40/docker-react  npm run test -- --coverage
+  - docker run rmorency40/docker-react1  npm run test -- --coverage
