--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,20 @@ services:
   - docker
 
 before_install:
-  - docker build -t rmorency40/docker-react1 -f Dockerfile.dev .
+  - docker build -t rmorency40/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run rmorency40/docker-react1  npm run test -- --coverage
+  - docker run rmorency40/docker-react  npm run test -- --coverage
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-west-2"
+  app: "docker-react"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-us-west-2-469664293428"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: $AWS_SECRET_KEY"
